footer change, woman page change

--- a/woman.html
+++ b/woman.html
@@ -43,11 +43,44 @@
 		</div>
 
 		<main>
+
+			<div class="page">
+				<div class="row">
+					<h2>WOMAN<span>CLOTHES</span></h2>
+				</div>
+			</div>
+
 			<div class="page">
 				<div class="row">
 					<div id="articles">
-						<div class="one-article">
-							
+						<div class="one-article col-md-4">
+							<img src="img/article1.jpeg">
+							<!-- <h3>lorem ipsum</h3> -->
+							<p><a href="">DETAILS</a></p>
+						</div>
+					
+						<div class="one-article col-md-4">
+							<img src="img/article2.jpeg">
+							<!-- <h3>lorem ipsum</h3> -->
+							<p><a href="">DETAILS</a></p>
+						</div>
+
+						<div class="one-article col-md-4">
+							<img src="img/article3.jpeg">
+							<!-- <h3>lorem ipsum</h3> -->
+							<p><a href="">DETAILS</a></p>
+						</div>
+
+						<div class="one-article col-md-4">
+							<img src="img/article4.jpeg">
+							<!-- <h3>lorem ipsum</h3> -->
+							<p><a href="">DETAILS</a></p>
+						</div>
+
+						<div class="one-article col-md-4">
+							<img src="img/article5.jpeg">
+							<!-- <h3>lorem ipsum</h3> -->
+							<p><a href="">DETAILS</a></p>
 						</div>
 					</div>
 				</div>
